[package]
name = "rust-node"
version = "0.1.0"
authors = ["Jisang Yun <jsyun0203@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
futures-util = "*" # 추가

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

