[package]
name = "rus2_r2r_te"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r = "*"  # r2r 크레이트 버전을 지정합니다.
tokio = { version = "*", features = ["full"] }  # 비동기 프로그래밍을 위한 tokio 추가
async-std = "*"  # 비동기 스레드 표준 라이브러리
futures-util = "*"# futures-util 추가

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"


[[bin]]
name = "turtlesim_twist_subscriber"
path = "src/turtlesim_twist_subscriber.rs"
